post question fixes : * Align ask question with the header logo * Ask Question description break after "the help" * handle the 4 screens of mobile design for ask question * QP-19404 fixed history with ask question * fixed tables overflow for question

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -209,3 +209,8 @@ input[type="search"]:focus::-webkit-search-cancel-button {
         padding-left: 15.5rem;
     }
 }
+
+.katex-display {
+    overflow-x: auto;
+    overflow-y: hidden;
+}
